--- a/Imágenes.html
+++ b/Imágenes.html
@@ -28,7 +28,7 @@
 <section>
     <h2>Cómo me inspiro para dibujar</h2>
     <video width="200" height="150" controls>
-        <source src="Los ruidos del mar.mp4" type="video/mp4">
+        <source src="https://github.com/cecith/TVG-/blob/b71cbbcebbe3fbdfbc0807b15cb7c3d9a550bf9f/Los%20ruidos%20del%20mar.mp4" type="video/mp4">
         No video support.
     </video>
 </section>
