--- a/Imágenes.html
+++ b/Imágenes.html
@@ -27,10 +27,12 @@
       </div>   
 <section>
     <h2>Cómo me inspiro para dibujar</h2>
-    <video width="200" height="150" controls>
-        <source src="https://github.com/cecith/TVG-/blob/b71cbbcebbe3fbdfbc0807b15cb7c3d9a550bf9f/Los%20ruidos%20del%20mar.mp4" type="video/mp4">
-        No video support.
     </video>
+    <video width="200" height="150" controls preload>
+     <source src="https://github.com/cecith/TVG-/blob/b71cbbcebbe3fbdfbc0807b15cb7c3d9a550bf9f/Los%20ruidos%20del%20mar.mp4" type="video/mp4">
+    No video support.
+</video>
+
 </section>
 <section>
     <h2>Cómo suena un gato</h2>
