--- a/Imágenes.html
+++ b/Imágenes.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="Imágenes.html">Imágenes</a></li>
-                <li><a href="Contacto.html">Consulta</a></li>
+                <li><a href="imagenes.html">Imágenes</a></li>
+                <li><a href="contacto.html">Consulta</a></li>
             </ul>
         </nav>
     </header>
@@ -24,22 +24,20 @@
         <img src="Imagen 2.webp" alt="Imagen 2">
         <img src="Imagen 3.webp" alt="Imagen 3">
         <img src="Imagen 4.webp" alt="Imagen 4">
-      </div>   
-<section>
-    <h2>Cómo me inspiro para dibujar</h2>
-    </video>
-    <video width="200" height="150" controls preload>
-     <source src="https://github.com/cecith/TVG-/blob/bbd6fe9c65171a7f064674c2e51d79a798beebb7/Los%20ruidos%20del%20mar.mp4" type="video/mp4">
-    No video support.
-</video>
-
-</section>
-<section>
-    <h2>Cómo suena un gato</h2>
-    <audio controls>
-        <source src="Gato.mp3" type="audio/mp3">
-        No audio support.
-    </audio><br>
+    </div>   
+    <section>
+        <h2>Cómo me inspiro para dibujar</h2>
+        <video width="200" height="150" controls preload>
+            <source src="https://github.com/cecith/TVG-/blob/bbd6fe9c65171a7f064674c2e51d79a798beebb7/Los%20ruidos%20del%20mar.mp4" type="video/mp4">
+            No video support.
+        </video>
+    </section>
+    <section>
+        <h2>Cómo suena un gato</h2>
+        <audio controls>
+            <source src="Gato.ogg" type="audio/ogg">
+            No audio support.
+        </audio><br>
     <h2>Cómo suena un dinosaurio</h2>
     <audio controls>
         <source src="Dinosaurio.mp3" type="audio/mp3">
